# draft-irtf-cfrg-vdaf

./: .gitignore  .gitmodules  .note.xml  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  archive.json  draft-irtf-cfrg-vdaf.html  draft-irtf-cfrg-vdaf.md  draft-irtf-cfrg-vdaf.txt  draft-patton-cfrg-vdaf.md  index.html  rejected_dictionary
poc/: .mypy.ini  Makefile  README.md  api.sage  circuit.py  common.py  common.sage  daf.py  daf.sage  example_flp_shamir.py  field.py  field.sage  flp.py  flp.sage  flp_bbcggi19.py  flp_generic.py  flp_generic.sage  gen_test_vec.py  idpf.py  idpf.sage  idpf_bbcggi21.py  idpf_poplar.py  idpf_poplar.sage  plot_prio3_multiproof_robustness.py  prg.py  prg.sage  prio3.sage  pyproject.toml  turboshake.py  vdaf.py  vdaf.sage  vdaf_poplar1.py  vdaf_poplar1.sage  vdaf_prio3.py  vdaf_prio3.sage  xof.py
poc/test_vec/01/: Poplar1Aes128_0.json  Poplar1Aes128_1.json  Poplar1Aes128_2.json  Poplar1Aes128_3.json  PrgAes128.json  Prio3Aes128Count.json  Prio3Aes128Count_0.json  Prio3Aes128Histogram.json  Prio3Aes128Histogram_0.json  Prio3Aes128Sum.json  (+1 more)
poc/tests/: idpf.py  idpf_util.py  test_common.py  test_daf.py  test_field.py  test_flp.py  test_flp_bbcggi19.py  test_flp_generic.py  test_idpf_bbcggi21.py  test_idpf_poplar.py  test_test_vectors.py  test_vdaf_ping_pong.py  test_vdaf_poplar1.py  test_vdaf_prio3.py  test_xof.py  vdaf.py  vdaf_util.py
poc/vdaf_poc/: __init__.py  common.py  daf.py  field.py  flp.py  flp_bbcggi19.py  idpf.py  idpf_bbcggi21.py  test_utils.py  vdaf.py  vdaf_ping_pong.py  vdaf_poplar1.py  vdaf_prio3.py  xof.py
(+824 files in other folders)
